[gd_scene load_steps=7 format=3 uid="uid://crdplisacccvt"]

[ext_resource type="PackedScene" uid="uid://c3gyjosb382do" path="res://Scenes/Classes/buff_class.tscn" id="1_uxp0t"]
[ext_resource type="Script" path="res://Scripts/Buffs/salem_spread_buff.gd" id="2_v0txk"]
[ext_resource type="Texture2D" uid="uid://oov3qeqnyjho" path="res://Assets/Images/Effects/smoke_particle.png" id="3_7wb1c"]
[ext_resource type="Script" path="res://Scripts/DefenceTowers/skill_particle_shooter.gd" id="4_wf0d5"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pcc84"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(60, 20, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
gravity = Vector3(0, -100, 0)
scale_min = 0.4

[sub_resource type="CircleShape2D" id="CircleShape2D_o5x87"]
radius = 73.9444

[node name="SalemSpreadBuff" instance=ExtResource("1_uxp0t")]
scale = Vector2(1.2, 1.2)
script = ExtResource("2_v0txk")
buff_type = 1
duration = 3.0
buff_tag = "SalemSpreadBuff"

[node name="SpreadTimer" type="Timer" parent="." index="0"]
autostart = true

[node name="SkillParticleShooter" type="GPUParticles2D" parent="." index="1"]
process_mode = 3
modulate = Color(0, 0.384314, 0, 0.180392)
z_index = 1
y_sort_enabled = true
scale = Vector2(0.879384, 0.879384)
amount = 80
process_material = SubResource("ParticleProcessMaterial_pcc84")
texture = ExtResource("3_7wb1c")
fixed_fps = 60
script = ExtResource("4_wf0d5")

[node name="SpreadArea" type="Area2D" parent="." index="2"]
scale = Vector2(0.5, 0.5)
collision_layer = 0
collision_mask = 96

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpreadArea" index="0"]
scale = Vector2(1, 0.7)
shape = SubResource("CircleShape2D_o5x87")
debug_color = Color(0, 1, 1, 0.137255)

[connection signal="timeout" from="SpreadTimer" to="." method="_on_spread_timer_timeout"]
